Send 회차별 의견 조회 수정